--- a/cart.html
+++ b/cart.html
@@ -119,7 +119,7 @@
 
     <script src="../js/nav.js"></script>
 <!-- CART SCRIPT -->
-<script src="../js/cart.js"></script>
+<script src="./js/cart.js"></script>
 
 <script src="./js/app.js"></script>
 <!-- Canvas 3D Text Script -->
